[package]
name = "tkprog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.9"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "tkprog"
crate-type = ["cdylib", "lib"]
